--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 logbook = "^1.5.3"
 quart = "^0.11.5"
 hypercorn = "^0.9.4"
+pyjwt = "^1.7.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.1"
