--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "covid_hackgov_server"
 version = "0.1.0"
 description = "Backend for covidhack.gov submission"
-authors = ["Taxiarchis-Peter Gomesis", "Edward Pasenidis", "Anastasios Meletelidis"]
+authors = ["Taxiarchis-Petros Gomesis", "Edouardos Pasenidis", "Anastasios Meletlidis"]
 license = "MIT"
 
 [tool.poetry.dependencies]
@@ -10,7 +10,8 @@ python = "^3.8"
 logbook = "^1.5.3"
 quart = "^0.11.5"
 hypercorn = "^0.9.4"
-pyjwt = "^1.7.1"
+itsdangerous = "^1.1.0"
+cerberus = "^1.3.2"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.1"
