--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ quart = "^0.11.5"
 hypercorn = "^0.9.4"
 itsdangerous = "^1.1.0"
 cerberus = "^1.3.2"
+aiohttp = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.1"
