--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,15 @@ authors = ["Taxiarchis-Petros Gomesis", "Edouardos Pasenidis", "Anastasios Melet
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 logbook = "^1.5.3"
 quart = "^0.11.5"
 hypercorn = "^0.9.4"
 itsdangerous = "^1.1.0"
 cerberus = "^1.3.2"
 aiohttp = "^3.6.2"
+pandas = "^1.0.3"
+asyncpg = "^0.20.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.1"
