--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ cerberus = "^1.3.2"
 aiohttp = "^3.6.2"
 pandas = "^1.0.3"
 asyncpg = "^0.20.1"
+Quart-CORS = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.1"
